# api

./: .env  Dockerfile  Install Certificates.command  app.ini  app.py  docker-compose.yml  index.py  pyproject.toml  readme.md  requirements.txt  token.json
.github/workflows/: main_auroraai.yml  main_style-backend-service.yml
nginx/: Dockerfile  nginx.conf
pretrained-bert/: vocab.txt
src/main/: app.py
src/main/config/: __init__.py
src/main/constants/: styleUp_email.html
src/main/routes/: __init__.py  bots.py  calendar_reader.py  context_template.json  crawler.py  credentials.json  midjourney_agent.py  semantic_search.py  token.json  users.py
src/main/utils/: __init__.py  model_actions.py  my_file.json  test.txt  train.txt
src/main/utils/models/: vocab.txt
src/main/utils/models/runs/May31_11-37-00_Shuyangs-MacBook-Pro.local/: events.out.tfevents.1685547420.Shuyangs-MacBook-Pro.local.96845.0
src/main/utils/models/runs/May31_11-37-00_Shuyangs-MacBook-Pro.local/1685547420.2691252/: events.out.tfevents.1685547420.Shuyangs-MacBook-Pro.local.96845.1
src/main/utils/models/runs/May31_11-41-37_Shuyangs-MacBook-Pro.local/: events.out.tfevents.1685547697.Shuyangs-MacBook-Pro.local.98675.0
src/main/utils/models/runs/May31_11-41-37_Shuyangs-MacBook-Pro.local/1685547697.9037209/: events.out.tfevents.1685547697.Shuyangs-MacBook-Pro.local.98675.1
src/main/utils/tmp/: c937a1e3-4480-48e4-a407-3021aca3f9f0_test.json
