[project]
name = "PokeChat"
version = "0.0.1"
# ...
dependencies = [
    "Flask == 2.0.2",
    "Flask-Cors",
    "python-dotenv==1.0.0",
    "pymongo==4.3.3",
    "bcrypt==4.0.1",
    "pyjwt==2.7.0",
    "semantic-kernel",
    "sentence-transformers==2.2.2",
    "pandas >= 2.0.1",
    "numpy",
    "scikit-learn"
]
