[project]
name = "PokeChat"
version = "0.0.1"
# ...
dependencies = [
    "Flask[async]",
    "Flask-Cors",
    "python-dotenv==1.0.0",
    "pymongo==4.3.3",
    "bcrypt==4.0.1",
    "pyjwt==2.7.0",
    "sentence-transformers==2.2.2",
    "pandas >= 2.0.1",
    "numpy==1.24.3",
    "scikit-learn==1.2.2",
    "azure-storage-blob==12.16.0",
    "tensorflow==2.13.0rc0",
    "transformers",
    "sentencepiece",
    "datasets",
    "accelerate",
    "langchain",
    "openai"
]
